# paste

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  architecture.md  index.html  package-lock.json  package.json  vision.md
.claude/: settings.json
.claude/skills/catchup/: SKILL.md
.claude/skills/draft-issue/: SKILL.md
.claude/skills/implement-address/: SKILL.md
.claude/skills/implement-code/: SKILL.md
.claude/skills/implement-plan/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
docs/: configuration.md  keyboard-shortcuts.md  text-expander.md  troubleshooting.md  user-guide.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  logging.rs  main.rs  overlay.rs  service.rs
src-tauri/src/clipboard/: dedup.rs  detection.rs  mod.rs  stack.rs  types.rs  wayland.rs  x11.rs
src-tauri/src/expander/: buffer.rs  engine.rs  export.rs  import.rs  keymap.rs  matcher.rs  mod.rs  template.rs
src-tauri/src/hotkey/: daemon.rs  keys.rs  mod.rs
src-tauri/src/injector/: clipboard_inject.rs  mod.rs  wtype.rs  xdotool.rs  ydotool.rs
src-tauri/src/storage/: clips.rs  db.rs  error.rs  migrations.rs  mod.rs  models.rs  pinboards.rs  retention.rs  search.rs  snippets.rs
src-tauri/src/tray/: mod.rs
src/hooks/: index.ts  useAnimation.ts  useClips.ts  usePinboards.ts  useSearch.ts  useSnippets.ts  useTheme.ts
src/stores/: clipStore.ts  index.ts  uiStore.ts
src/test/: fixtures.ts  setup.ts  utils.test.ts
(+34 files in other folders)
