[package]
name = "paste"
version = "0.1.0"
edition = "2021"
description = "macOS Paste-quality clipboard manager with text expansion for Linux"
license = "MIT"

[lib]
name = "paste_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
rusqlite = { version = "0.39", features = ["bundled-full"] }
evdev = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v7"] }
chrono = { version = "0.4", features = ["serde"] }
image = "0.25"
sha2 = "0.10"
toml = "0.8"
dirs = "5"
log = "0.4"
env_logger = "0.11"
thiserror = "2"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["xfixes"] }
